kubernetes/applications/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pdf.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: pdf.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  number: 80
